--- a/Task6.html
+++ b/Task6.html
@@ -24,7 +24,7 @@
 
 		<div class="firstpassage">
 			<div class="firstpassage-picture">
-				<img src="https://raw.githubusercontent.com/dengchaoWeb/ife_2016/master/spring/task0001/task06/images/img_one.jpg">
+				<img src="Task6_img/img1.jpg">
 				<div class="fpp-left"></div>
 				<div class="fpp-right"></div>
 			</div>
