--- a/Task7/Task7.html
+++ b/Task7/Task7.html
@@ -3,7 +3,7 @@
 <head>
 	<title>Task7-New World</title>
 	<meta charset="utf-8">
-	<link rel="stylesheet" type="text/css" href="task7.css">
+	<link rel="stylesheet" type="text/css" href="Task7.css">
 </head>
 <body>
 	<div class="container">
