--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
 <body>
 	<h1>Hello World!</h1>
 	<ul>
-		<a href="Task2/Task2.html">Task2 零基础HTML及CSS编码（二）</a>
-		<a href="Task3/Task3.html">Task3 三栏式布局</a>
-		<a href="Task4/Task4.html">Task4 定位及居中问题</a>
-		<a href="Task5/Task5.html">Task5 零基础HTML及CSS编码（三）</a>
-		<a href="Task6/Task6.html">Task6 通过HTML及CSS模拟报纸排版</a>
-		<a href="Task7/Task7.html">Task7 实现常见的技术产品官网的页面架构和样式布局</a>
-		<a href="Task8/Task8.html">Task8 响应式网格（栅栏式）布局</a>		
+		<li><a href="Task2/Task2.html">Task2 零基础HTML及CSS编码（二）</a></li>
+		<li><a href="Task3/Task3.html">Task3 三栏式布局</a></li>
+		<li><a href="Task4/Task4.html">Task4 定位及居中问题</a></li>
+		<li><a href="Task5/Task5.html">Task5 零基础HTML及CSS编码（三）</a></li>
+		<li><a href="Task6/Task6.html">Task6 通过HTML及CSS模拟报纸排版</a></li>
+		<li><a href="Task7/Task7.html">Task7 实现常见的技术产品官网的页面架构和样式布局</a></li>
+		<li><a href="Task8/Task8.html">Task8 响应式网格（栅栏式）布局</a></li>
 	</ul>
 </body>
 </html>
