--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
 	<meta charset="utf-8">
 </head>
 <body>
-	<h1>Hello World!</h1>
+	<h1>小金の日常作业收集夹</h1>
+	<p>这里是小金的日常作业收集夹，更新我学习前端的日常作业，这个页面很丑，但我不会改的【耿直的围笑】</p>
 	<ul>
 		<li><a href="Task2/Task2.html">Task2 零基础HTML及CSS编码（二）</a></li>
 		<li><a href="Task3/Task3.html">Task3 三栏式布局</a></li>
