--- a/Task11/Task11.html
+++ b/Task11/Task11.html
@@ -22,6 +22,38 @@
 		<div class="part1">
 			<img src="img/bear-figure.png" alt="bear-figure" height="546" width="980">
 		</div>
+		<div class="part2">
+			<div class="label">
+				<div class="icon">
+					<img src="img/doc.svg" width=90 height=90>
+				</div>
+				<p>标签</p>
+			</div>
+			<div class="label">
+				<div class="icon">
+					<img src="img/doc.svg" width=90 height=90>
+				</div>
+				<p>标签</p>
+			</div>
+			<div class="label">
+				<div class="icon">
+					<img src="img/doc.svg" width=90 height=90>
+				</div>
+				<p>标签</p>
+			</div>
+			<div class="label">
+				<div class="icon">
+					<img src="img/doc.svg" width=90 height=90>
+				</div>
+				<p>标签</p>
+			</div>
+			<div class="label">
+				<div class="icon">
+					<img src="img/doc.svg" width=90 height=90>
+				</div>
+				<p>标签</p>
+			</div>
+		</div>
 	</div>
 </body>
 </html>
