--- a/Task11/Task11.html
+++ b/Task11/Task11.html
@@ -54,6 +54,75 @@
 				<p>标签</p>
 			</div>
 		</div>
+		<div class="part3">
+			<div class="part3-cols">
+				<img src="img/bear-column-1.png">
+				<h1>分栏一</h1>
+				<h2>分栏小标题</h2>
+			</div>
+			<div class="part3-cols">
+				<img src="img/bear-column-2.png">
+				<h1>分栏二</h1>
+				<h2>分栏小标题</h2>
+			</div>
+			<div class="part3-cols">
+				<img src="img/bear-column-3.png">
+				<h1>分栏三</h1>
+				<h2>分栏小标题</h2>
+			</div>
+		</div>
+		<div class="part4">
+			<div class="part4-head">
+				<hr/>
+			</div>
+			<h1>模块一</h1>
+			<div class="part4-main">
+				<div class="part4-left">
+					<img src="img/bear-avatar.png">
+					<img src="img/bear-avatar.png">
+				</div>
+				<div class="part4-right">
+					<div class="copywriter">这是文案</div>
+					<div class="copywriter">这是文案</div>
+					<div class="copywriter">这是文案</div>
+					<div class="copywriter">这是文案</div>
+					<div class="copywriter">这是文案</div>
+					<div class="copywriter">这是文案</div>
+					<div class="copywriter">这是文案</div>
+					<div class="copywriter">这是文案</div>
+				</div>
+			</div>
+		</div>
+		<div class="part5">
+			<div class="part5-head">
+				<hr/>
+			</div>
+			<h1>模块一</h1>
+			<div class="part5-main">
+				<div class="part5-left">
+					<img src="img/bear-avatar.png">
+					<img src="img/bear-avatar.png">
+				</div>
+				<div class="part5-right">
+					<div class="copywriter">这是文案</div>
+					<div class="copywriter">这是文案</div>
+					<div class="copywriter">这是文案</div>
+					<div class="copywriter">这是文案</div>
+					<div class="copywriter">这是文案</div>
+					<div class="copywriter">这是文案</div>
+					<div class="copywriter">这是文案</div>
+					<div class="copywriter">这是文案</div>
+				</div>
+			</div>
+		</div>
+		<div class="part6">
+			<hr/>
+			<div class="part6-article1">
+				<div class="part6-article-right">
+					<img src="">
+				</div>
+			</div>
+		</div>
 	</div>
 </body>
 </html>
