--- a/Task11/Task11.html
+++ b/Task11/Task11.html
@@ -118,11 +118,34 @@
 		<div class="part6">
 			<hr/>
 			<div class="part6-article1">
+				<div class="part6-article-left">
+					<img src="img/bear-article.png" width="300" height="200">
+				</div>
 				<div class="part6-article-right">
-					<img src="">
+					<h2>这是文章标题字号是22的文章标题</h2>
+					<p>文章来源 6分钟前</p>
 				</div>
 			</div>
+			<div class="part6-article1">
+				<div class="part6-article-left">
+					<img src="img/bear-article.png" width="300" height="200">
+				</div>
+				<div class="part6-article-right">
+					<h2>这是另一个文章标题</h2>
+					<p>文章来源 6分钟前</p>
+				</div>
+			</div>
+			<div class="part6-article2">
+				<h2>这个也是文章标题字号是22的文章标题</h2>
+				<img src="img/bear-article.png" width="300" height="200">
+				<img src="img/bear-article.png" width="300" height="200">
+				<img src="img/bear-article.png" width="300" height="200">
+				<p>文章来源 6分钟前</p>
+			</div>
 		</div>
+		<footer>
+			<p>小金の日常作业11 2016.10.13</p>
+		</footer>
 	</div>
 </body>
 </html>
