--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 		<li><a href="Task8/Task8.html">Task8 响应式网格（栅栏式）布局</a></li>
 		<li><a href="Task10/Task10.html">Task10 Flexbox布局练习</a></li>
 		<li><a href="Task11/Task11.html">Task11 移动Web页面布局实践</a></li>
+		<li><a href="Task12/Task12.html">Task12 学习CSS3的新特性</a></li>
 	</ul>
 </body>
 </html>
