--- a/index.html
+++ b/index.html
@@ -3,22 +3,25 @@
 <head>
 	<title>Index</title>
 	<meta charset="utf-8">
+	<link rel="stylesheet" type="text/css" href="index.css">
 </head>
 <body>
-	<h1>小金の日常作业收集夹</h1>
-	<p>这里是小金的日常作业收集夹，更新我学习前端的日常作业，这个页面很丑，但我不会改的【耿直的围笑】</p>
-	<ul>
-		<li><a href="Task2/Task2.html">Task2 零基础HTML及CSS编码（二）</a></li>
-		<li><a href="Task3/Task3.html">Task3 三栏式布局</a></li>
-		<li><a href="Task4/Task4.html">Task4 定位及居中问题</a></li>
-		<li><a href="Task5/Task5.html">Task5 零基础HTML及CSS编码（三）</a></li>
-		<li><a href="Task6/Task6.html">Task6 通过HTML及CSS模拟报纸排版</a></li>
-		<li><a href="Task7/Task7.html">Task7 实现常见的技术产品官网的页面架构和样式布局</a></li>
-		<li><a href="Task8/Task8.html">Task8 响应式网格（栅栏式）布局</a></li>
-		<li><a href="Task10/Task10.html">Task10 Flexbox布局练习</a></li>
-		<li><a href="Task11/Task11.html">Task11 移动Web页面布局实践</a></li>
-		<li><a href="Task12/Task12.html">Task12 学习CSS3的新特性</a></li>
-		<li><a href="Task13/Task13.html">Task13 零基础JavaScript编码（一）</a></li>
-	</ul>
+	<div class="container">
+		<h1>小金の日常作业收集夹</h1>
+		<p>这里是小金的日常作业收集夹，更新我学习前端的日常作业，这个页面很丑，但我不会改的【耿直的围笑】</p>
+		<ul>
+			<li><a href="Task2/Task2.html">Task2 零基础HTML及CSS编码（二）</a></li>
+			<li><a href="Task3/Task3.html">Task3 三栏式布局</a></li>
+			<li><a href="Task4/Task4.html">Task4 定位及居中问题</a></li>
+			<li><a href="Task5/Task5.html">Task5 零基础HTML及CSS编码（三）</a></li>
+			<li><a href="Task6/Task6.html">Task6 通过HTML及CSS模拟报纸排版</a></li>
+			<li><a href="Task7/Task7.html">Task7 实现常见的技术产品官网的页面架构和样式布局</a></li>
+			<li><a href="Task8/Task8.html">Task8 响应式网格（栅栏式）布局</a></li>
+			<li><a href="Task10/Task10.html">Task10 Flexbox布局练习</a></li>
+			<li><a href="Task11/Task11.html">Task11 移动Web页面布局实践</a></li>
+			<li><a href="Task12/Task12.html">Task12 学习CSS3的新特性</a></li>
+			<li><a href="Task13/Task13.html">Task13 零基础JavaScript编码（一）</a></li>
+		</ul>
+	</div>
 </body>
 </html>
