--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<title>Index</title>
 	<meta charset="utf-8">
 	<link rel="stylesheet" type="text/css" href="index.css">
+	<meta name="viewport" minimum-scale=1 maximum-scale=1 user-scalable=0>
 </head>
 <body>
 	<div class="container">
