--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 			<li><a href="Task4/Task4.html">Task4 定位及居中问题</a></li>
 			<li><a href="Task5/Task5.html">Task5 零基础HTML及CSS编码（三）</a></li>
 			<li><a href="Task6/Task6.html">Task6 通过HTML及CSS模拟报纸排版</a></li>
-			<li><a href="Task7/Task7.html">Task7 实现常见的技术产品官网的页面架构和样式布局</a></li>
+			<li><a href="Task7/Task7.html">Task7 常见的技术产品官网的页面架构和样式布局</a></li>
 			<li><a href="Task8/Task8.html">Task8 响应式网格（栅栏式）布局</a></li>
 			<li><a href="Task10/Task10.html">Task10 Flexbox布局练习</a></li>
 			<li><a href="Task11/Task11.html">Task11 移动Web页面布局实践</a></li>
