--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
 			<li><a href="Task13/Task13.html">Task13 零基础JavaScript编码（一）</a></li>
 			<li><a href="task17/index.html">Task17 每日空气质量数值统计柱状图</a></li>
 			<li><a href="project1/index.html">CSS3实现3D 轮播图</a></li>
+			<li><a href="project2/index.html">UI组件之浮出层</a></li>
 		</ul>
 	</div>
 </body>
