--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 	<div class="container">
 		<h1>小金の日常作业收集夹</h1>
-		<p>这里是小金的日常作业收集夹，更新我学习前端的日常作业，这个页面很丑，但我不会改的【耿直的围笑】</p>
+		<p>这里是小金的日常项目收集夹，更新我学习前端的日常项目，这个页面很丑而且内容乱七八糟，但我不会改的【耿直的围笑】</p>
 		<ul>
 			<li><a href="Task2/Task2.html">Task2 零基础HTML及CSS编码（二）</a></li>
 			<li><a href="Task3/Task3.html">Task3 三栏式布局</a></li>
@@ -25,6 +25,7 @@
 			<li><a href="task17/index.html">Task17 每日空气质量数值统计柱状图</a></li>
 			<li><a href="project1/index.html">CSS3实现3D 轮播图</a></li>
 			<li><a href="project2/index.html">UI组件之浮出层</a></li>
+			<li><a href="project3/index.html">Canvas 绘制时钟</a></li>
 		</ul>
 	</div>
 </body>
