--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 			<li><a href="project1/index.html">CSS3实现3D 轮播图</a></li>
 			<li><a href="project2/index.html">UI组件之浮出层</a></li>
 			<li><a href="project3/index.html">Canvas 绘制时钟</a></li>
-			<li><a href="project4index.html">炫丽的倒计时效果</a></li>
+			<li><a href="project4/index.html">炫丽的倒计时效果</a></li>
 		</ul>
 	</div>
 </body>
