--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
 			<li><a href="project2/index.html">UI组件之浮出层</a></li>
 			<li><a href="project3/index.html">Canvas 绘制时钟</a></li>
 			<li><a href="project4/index.html">炫丽的倒计时效果</a></li>
+			<li><a href="2048/index.html">2048游戏</a></li>
 		</ul>
 	</div>
 </body>
