--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
 			<li><a href="project3/index.html">Canvas 绘制时钟</a></li>
 			<li><a href="project4/index.html">炫丽的倒计时效果</a></li>
 			<li><a href="2048/index.html">2048游戏</a></li>
+			<li><a href="iGEM/test.html">iGEM</a></li>		
 		</ul>
 	</div>
 </body>
