--- a/iGEM/test.html
+++ b/iGEM/test.html
@@ -3,7 +3,7 @@
 <head>
  	<meta http-equiv="Content-type" content="text/html;charset=UTF-8" />
  	<link rel="stylesheet" href="https://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
- 	<script type="text/javascript" src="http://code.jquery.com/jquery-latest.js"></script>
+ 	<script src="http://libs.baidu.com/jquery/1.11.1/jquery.min.js"></script>
  	<title>Demo</title>
 
  	<style type="text/css">
